name:                dwarfadt
version:             0.1.0.0
synopsis:            High-level wrapper around the dwarf library
description:         dwarf is an excellent library to read dwarf files, but the output of
                     parsing dwarf is very low-level and difficult to work with.
                     .
                     This library intends to wrap dwarf and return a simple ADT representing
                     the DWARF information in a high-level way, easy to work with.
license:             BSD3
license-file:        LICENSE
author:              Eyal Lotem
maintainer:          eyal.lotem@gmail.com
-- copyright:
category:            Development
build-type:          Simple
cabal-version:       >=1.8

library
  hs-source-dirs:      src
  exposed-modules:     Data.Dwarf.Elf, Data.Dwarf.ADT
  build-depends:       base >= 4 && < 5, errors ==1.3.*, elf ==0.27.*, bytestring-mmap ==0.2.*, dwarf ==0.23.*

executable dumpdwarf
  main-is:             dumpdwarf.hs
  build-depends:       base >= 4 && < 5, dwarfadt, dwarf, containers

executable dumpadt
  main-is:             dumpadt.hs
  build-depends:       base >= 4 && < 5, dwarfadt
